@@ -17,3 +17,4 @@
 <!ENTITY gmail-buton-signsend-checkbox "Signer et Envoyer">
 <!ENTITY gmail-buton-crypt-checkbox "Chiffrer">
 <!ENTITY gmail-buton-cryptsend-checkbox "Chiffrer et Envoyer">
+<!ENTITY allvays-to-myself-checkbox "Toujours encrypter les messages pour soi-même.">
